# rust-to-wasm

./: README.md
core/: Cargo.toml  build.sh  objdump.sh  wat.sh
core/src/: lib.rs
web/: .gitignore  index.html
web/src/: wasm.ts
