[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"    # Optimize for size
lto = true         # Enable Link Time Optimization
codegen-units = 1  # Reduced to increase optimizations
panic = "abort"    # Abort on panic - less code
strip = true       # Strip symbols from binary

[dependencies]
